* fixed horizontal scroll in pivot tables (#366) * fixed state of exclude filters (#367) * fixed series reset after filtering (#140)

--- a/src/scss/pivot-table.scss
+++ b/src/scss/pivot-table.scss
@@ -161,7 +161,7 @@ $row-height: 22px;
 }
 
 .lpt .lpt-tableBlock {
-    overflow-x: hidden;
+    //overflow-x: hidden;
 }
 
 // Footer
